@@ -499,6 +499,36 @@ class Vector extends Layer {
     }
     this.map = null;
   }
+
+  /**
+   * This function return extent of all features or discriminating by the filter
+   *
+   * @function
+   * @param {boolean} skipFilter - Indicates whether skip filter
+   * @param {M.Filter} filter - Filter to execute
+   * @return {Array<number>} Extent of features
+   * @api stable
+   */
+  /*getFeaturesExtentPromise(skipFilter, filter) {
+    return new Promise((resolve) => {
+      const codeProj = this.map.getProjection().code;
+      if (this.isLoaded() === true) {
+        const features = this.getFeatures(skipFilter, filter);
+        const extent = ImplUtils.getFeaturesExtent(features, codeProj);
+        resolve(extent);
+      } else {
+        this.requestFeatures_().then((features) => {
+          const featuresArr = features.features
+            && !Array.isArray(features)
+            && Array.isArray(features.features)
+            ? features.features
+            : features;
+          const extent = ImplUtils.getFeaturesExtent(featuresArr, codeProj);
+          resolve(extent);
+        });
+      }
+    });
+  }*/
 }
 
 export default Vector;
